@@ -4,6 +4,7 @@ import co.istad.y2.quizzy.dto.answer.AnswerResponseDto;
 import co.istad.y2.quizzy.dto.question.CreateQuestionDto;
 import co.istad.y2.quizzy.dto.question.QuestionResponseDto;
 import co.istad.y2.quizzy.dto.question.UpdateQuestionDto;
+import co.istad.y2.quizzy.mapper.QuestionMapper;
 import co.istad.y2.quizzy.model.*;
 import co.istad.y2.quizzy.repository.AnswerRepository;
 import co.istad.y2.quizzy.repository.QuestionRepository;
@@ -11,7 +12,9 @@ import co.istad.y2.quizzy.repository.QuizRepository;
 import co.istad.y2.quizzy.repository.UserRepository;
 import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -23,14 +26,18 @@ public class QuestionServiceImpl implements QuestionService {
     private final AnswerRepository answerRepository;
     private final UserRepository userRepository;
     private final QuizRepository quizRepository;
+    private final QuestionMapper questionMapper;
 
     public QuestionServiceImpl(QuestionRepository questionRepository,
                                AnswerRepository answerRepository,
-                               UserRepository userRepository, QuizRepository quizRepository){
+                               UserRepository userRepository,
+                               QuizRepository quizRepository,
+                               QuestionMapper questionMapper){
         this.questionRepository = questionRepository;
         this.answerRepository = answerRepository;
         this.userRepository = userRepository;
         this.quizRepository = quizRepository;
+        this.questionMapper = questionMapper;
     }
 
     @Override
@@ -57,16 +64,7 @@ public class QuestionServiceImpl implements QuestionService {
         Question saved = questionRepository.save(question);
         List<AnswerResponseDto> answerResponseDtos = saved.getAnswers().stream()
                 .map(a->new AnswerResponseDto(a.getId(),a.getText(),a.isCorrect())).toList();
-
-        return new QuestionResponseDto(
-                saved.getId(),
-                saved.getText(),
-                saved.getQuiz().getId(),
-                answerResponseDtos,
-                saved.getQuestionType(),
-                saved.getPoints(),
-                saved.getDifficulty()
-        );
+        return questionMapper.mapToResponse(saved);
     }
 
     @Override
@@ -75,115 +73,61 @@ public class QuestionServiceImpl implements QuestionService {
             List<AnswerResponseDto> answerResponseDtos = q.getAnswers().stream()
                     .map(a-> new AnswerResponseDto(a.getId(),a.getText(),a.isCorrect()))
                     .toList();
-            return new QuestionResponseDto(
-                    q.getId(),
-                    q.getText(),
-                    q.getQuiz().getId(),
-                    answerResponseDtos,
-                    q.getQuestionType(),
-                    q.getPoints(),
-                    q.getDifficulty()
-            );
+             return questionMapper.mapToResponse(q);
         }).toList();
     }
 
-//    @Override
-//    public List<QuestionResponseDto> getQuestionsByCategory(Long categoryId){
-//        return questionRepository.findByCategoryId(categoryId).stream().
-//                map(q->{
-//                    List<AnswerResponseDto> answerResponseDtos = q.getAnswers().stream()
-//                            .map(a-> new AnswerResponseDto(a.getId(),a.getText(),a.isCorrect()))
-//                            .toList();
-//                    return new QuestionResponseDto(q.getId(),q.getText(),q.getCreatedBy().getUsername(),answerResponseDtos);
-//                }).toList();
-//    }
-
     @Override
-    public QuestionResponseDto updateQuestion(Long id, UpdateQuestionDto dto) {
-        Question question = questionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Question Not Found!"));
-
+    @Transactional
+    public QuestionResponseDto updateQuestion( UpdateQuestionDto dto) {
+        Question question = questionRepository.findById(dto.quizId())
+                .orElseThrow(() -> new ResponseStatusException( HttpStatus.NOT_FOUND,"Question Not Found!"));
         if (dto.text() != null) question.setText(dto.text());
-        if (dto.quizId() != null) {
-            Quiz quiz = quizRepository.findById(dto.quizId())
-                    .orElseThrow(() -> new RuntimeException("Quiz Not Found!"));
-            question.setQuiz(quiz);
-        }
         if (dto.questionType() != null) question.setQuestionType(dto.questionType());
         if (dto.points() != null) question.setPoints(dto.points());
         if (dto.difficulty() != null) question.setDifficulty(dto.difficulty());
-        List<Answer> updatedAnswers = dto.answers().stream()
-                .map(aDto -> {
-                    Answer ans;
-                    if (aDto.id() != null) {
-                        // existing answer
-                        ans = answerRepository.findById(aDto.id())
-                                .orElseThrow(() -> new RuntimeException("Answer Not Found!"));
-                        ans.setText(aDto.text());
-                        ans.setCorrect(aDto.correct());
-                    } else {
-                        // new answer
-                        ans = new Answer();
-                        ans.setText(aDto.text());
-                        ans.setCorrect(aDto.correct());
-                        ans.setQuestion(question);
-                    }
-                    return ans;
-                }).collect(Collectors.toList());
-        question.getAnswers().removeIf(existing ->
-                updatedAnswers.stream().noneMatch(a -> a.getId() != null && a.getId().equals(existing.getId()))
-        );
-        updatedAnswers.stream()
-                .filter(a -> a.getId() == null)
-                .forEach(question.getAnswers()::add);
+        if (dto.answers() != null) {
+            List<Long> incomingIds = dto.answers().stream()
+                    .map(a -> a.id())
+                    .filter(ansId -> ansId != null)
+                    .toList();
+            question.getAnswers().removeIf(existing -> !incomingIds.contains(existing.getId()));
+            // Update existing or add new
+            dto.answers().forEach(aDto -> {
+                if (aDto.id() != null) {
+                    // Update existing answer
+                    Answer existingAnswer = question.getAnswers().stream()
+                            .filter(a -> a.getId().equals(aDto.id()))
+                            .findFirst()
+                            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,"Answer " + aDto.id() + " not found in this question"));
+                    existingAnswer.setText(aDto.text());
+                    existingAnswer.setCorrect(aDto.correct());
+                } else {
+                    // Add new answer
+                    Answer newAns = new Answer();
+                    newAns.setText(aDto.text());
+                    newAns.setCorrect(aDto.correct());
+                    newAns.setQuestion(question); // Set relationship
+                    question.getAnswers().add(newAns);
+                }
+            });
+        }
         Question saved = questionRepository.save(question);
-        List<AnswerResponseDto> answerResponseDtos = saved.getAnswers().stream()
-                .map(a -> new AnswerResponseDto(a.getId(), a.getText(), a.isCorrect()))
-                .toList();
-        return new QuestionResponseDto(
-                saved.getId(),
-                saved.getText(),
-                saved.getQuiz() != null ? saved.getQuiz().getId() : null,
-                answerResponseDtos,
-                saved.getQuestionType(),
-                saved.getPoints(),
-                saved.getDifficulty()
-        );
+        return questionMapper.mapToResponse(saved);
     }
+
     @Override
     @Transactional
     public void deleteQuestion(Long id){
         Question question = questionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Question Not Found!"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,"Question Not Found!"));
         log.info("Deleting question with id: {}", question.getId());
         log.info("Question text: {}", question.getText());
-
         Quiz quiz = question.getQuiz();
         if (quiz != null) {
             quiz.getQuestions().remove(question);
         }
         questionRepository.delete(question);
-
         log.info("Question deleted successfully");
     }
-
-//    @Override
-//    public QuestionResponseDto getQuestionById(Long id) {
-//        Question question = questionRepository.findById(id).orElseThrow(
-//                ()-> new QuestionNotFoundException("Question with this id doesn't exist!")
-//        );
-//
-//        List<AnswerResponseDto> answerResponseDtos = saved.getAnswers().stream()
-//                .map(a->new AnswerResponseDto(a.getId(),a.getText(),a.isCorrect())).toList();
-//
-//
-//        List<AnswerResponseDto> answerResponseDtos = question.getAnswers().stream()
-//                .map(a->new AnswerResponseDto(a.getId(),a.getText(),a.isCorrect())).toList();
-//        return new QuestionResponseDto(question.getId(),
-//                question.getText(),
-//                question.getCreatedBy().getUsername(),
-//                answerResponseDtos
-//        );
-//    }
-
 }
